--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <form action="#" method="GET">
         <input type="button" value="Enviar">
+        <input type="text" name="firstName" id="firstName">
     </form>
 </body>
 </html>
