--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <form action="#" method="GET">
         <input type="button" value="Enviar">
         <input type="text" name="firstName" id="firstName">
+        <input type="text" name="lastName" id="lastName">
+
     </form>
 </body>
 </html>
