--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <form action="#" method="GET">
         <input type="button" value="Enviar">
-        <input type="text" name="firstName" id="firstName">
+        <input type="texto" name="firstName" id="firstName">
         <input type="text" name="lastName" id="lastName">
         <input type="number" name="age" id="age">
 
